# sudoblark.monsternames.api

./: .checkov.yaml  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.ini  docker-compose.yml  dockerfile  ruff.toml
.github/workflows/: apply.yaml  deploy.yaml  on_pull_request.yaml  pull-request.yaml
application/backend-lambda/: config.ini  pyproject.toml
application/backend-lambda/backend_lambda/: main.py  utilities.py
application/open_api_definitions/: monsternames.yaml
application/swagger_ui/: index.html
features/: api.feature  environment.py
features/steps/: steps.py
infrastructure/aws-sudoblark-production/: api_gateway.tf  application_registry.tf  data.tf  dns.tf  iam.tf  lambda.tf  main.tf  outputs.tf  s3.tf  s3_files.tf
infrastructure/modules/additional_s3_files/: data.tf  locals.tf
infrastructure/modules/api_gateway_rest_api/: api_gateway_restapi.tf  data.tf  locals.tf
infrastructure/modules/application_registry/: application_registry.tf  output.tf  providers.tf
infrastructure/modules/iam_roles/: data.tf  iam_roles.tf  locals.tf
infrastructure/modules/lambda/: lambda.tf  locals.tf
infrastructure/sudoblark/: additional_s3_files.tf  api_gateway.tf  iam_roles.tf  lambda.tf  main.tf  s3_bucket.tf  variables.tf
lambda-packages/backend/: README.md  requirements.txt
modules/data/: api_gateways.tf  buckets.tf  defaults.tf  iam_roles.tf  infrastructure.tf  lambdas.tf  main.tf  outputs.tf  s3_files.tf  variables.tf
modules/infrastructure/iam/: locals.tf  (+3 more)
monsternames.api/: main.py  utilities.py
scripts/: build-lambda.sh
(+23 files in other folders)
