[tool.poetry]
name = "backend_lambda"
version = "1.0.0"
description = 'Lambda act as the backend to our API, perform inserts and retrieve operations against DynamoDB.
license = "Proprietary"
authors = [
    "Ben Clark <bclark@sudoblark.com>"
]
repository  = 'https://github.com/sudoblark/sudoblark.monsternames.api'
classifiers = [
    "Topic :: AWS Lambda :: Python Data Scripts"
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"
boto3 = { version = '1.28.63' }
aws-lambda-powertools = { version = '2.26.0' }

[tool.poetry.group.test.dependencies]
black = { version = '23.3.0' }
Flake8-pyproject = { version = '1.2.3' }
pytest = { version = '7.4.3' }
pytest-env = { version = '1.1.1' }
coverage = { version = '7.2.7' }
random-word = {version = "1.0.11"}
lorem-text = { version = "2.1"}


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = ["E203", "E266", "W503", "W605"]
max-line-length = 100
select = ["B", "C", "E", "F", "W", "T4", "B9"]
exclude = [
    ".git", "__pycache__", "old", "build", "dist", "database", "junit", "env", "_venv",
    "custom"
]

[tool.coverage.run]
source = ["data_sync"]
branch = true
omit = [
    "**/__init__.py",
    "tests/*"
]